static/css/main.css
:root {
    --main-color:#007eff;
    --background-color:#ffffff;
    --main-dark-color: #007adb;
    --main-light-color: rgba(0, 126, 255, 0.2);
    --text-color: #ffffff;
    --main-text-color: #272933;
    --href-bg-color: #f1f1f1;
}

html {
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Montserrat', sans-serif;
    font-size: 15px;
    height: 100%;
    background-color: var(--background-color);
}

button {
    font-family: 'Montserrat', sans-serif;
    font-size: 14px;
    text-decoration: none;
    border-radius: 6px;
    border: 1px solid;

}

input {
    font-family: 'Montserrat', sans-serif;
}

select {
    font-family: 'Montserrat', sans-serif;
    font-size: 14px;
}

header {
    height: 50px;
    position: fixed;
    width: 100%;
}

.navbar {
    background-color: var(--main-color);
    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.1);
    border-bottom: var(--main-dark-color) solid 1px;
    z-index: 10;
}

main {
    min-height: calc(100vh - 160px);
}

.navbar, .main-container {
    padding: 0 10% 0 10%;
}

.main-container {
    padding-top: 60px;
    padding-bottom: 60px;
}

.navbar-item:hover {
    background-color: var(--main-dark-color);
    border-radius: 5px;
}

.navbar-logout {
    margin-right: 60px;
}


.profile-nav {
    padding: 5px;
    display: inline-block;
    color: var(--text-color);
    text-decoration: none;
    cursor: pointer;
}

.profile-nav img {
    width: 40px;
    height: 40px;
    vertical-align: middle;
    border: var(--text-color) solid 1px;
    border-radius: 30px;
    box-shadow: 0 1px 0 1px rgba(0,0,0,0.07);

}


.navbar-logo-text {
    text-transform: uppercase;
    /* font-size: 30px; */
    font-weight: bold;
    font-size: 18px;
    /* vertical-align: middle; */
}

.navbar-item {
    display: inline-block;
    color: var(--text-color);
    text-decoration: none;
    padding: 16px 16px;
    white-space: nowrap;
    text-shadow: 0 -1px 0 rgba(0,0,0,0.25);
}

.dropdown {
    display: inline-block;
    height: 100%;
}

.dropdown:hover {
    background-color: var(--main-dark-color);
    border-radius: 5px;
}

.dropdown-content {
    margin-top: 1px;
    display: none;
    position: fixed;
    background-color: var(--background-color);
    border: var(--main-dark-color) solid 1px;
    width: 160px;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
    z-index: 1;
    top: 50px;
    border-radius: 5px;
}

.dropdown-content a {
    color: var(--main-text-color);
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

.dropdown-content a:hover {
    background-color: var(--href-bg-color);
    border-radius: 5px;
    color: var(--main-color);
}

.row {
    display: flex;
}

.column-1 {
    flex: 8.33333333%;
}

.column-2 {
    flex: 16.6666666%;
}

.column-3 {
    flex: 25%;
}

.column-4 {
    flex: 33.33333333%;
}

.column-5 {
    flex: 41.66666666%;
}

.column-6 {
    flex: 50%;
}

.column-7 {
    flex: 58.33333333%;
}

.column-8 {
    flex: 66.33333333%;
}

.column-9 {
    flex: 75%;
}

.column-10 {
    flex: 83.33333333%;
}

.column-11 {
    flex: 91%;
}

.column-12 {
    flex: 100%;
}

.sidebar {
    position: fixed;
    width: 250px;
    z-index: 1;
    overflow-x: hidden;
}

.sidebar-container {
    border-radius: 8px;
    border-style: solid;
    border-width: 1px;
    border-color: var(--main-color);
    margin-top: 40px;
    margin-bottom: 10px;
    box-shadow: 0 4px 4px 0 rgba(0,0,0,0.1);
}

.sidebar-container .header-sidebar {
    padding: 10px;
}

.sidebar-container li {
    padding: 5px 10px 5px 5px;
}

.row .header-sidebar .column-2 {
    text-align: right;
}

.sidebar-container i {
    vertical-align: middle;
    color: var(--main-color);
}

.sidebar-container h3 {
    padding: 2px;
    margin: 0;
    color: var(--main-color);
}

.hr {
    width: 100%;
    height: 1px;
    color: rgba(0, 0, 0, 0);
    background-color: var(--main-color);
}

.group {
    box-shadow: 0 3px 10px 0 var(--main-light-color);
    height: 100%;
    margin-top: 10px;
}

.group-header {
    display: inline-block;
    width: 97%;
    padding: 10px 2% 10px 2%;

}

.group-header h1 {
    padding: 0 0 0 3%;
    color: var(--main-text-color);
}

.group-header button {
    width: 130px;
    height: 34px;
    transition: all 0.5s cubic-bezier(0.65,-0.25,0.25, 1.95);
}

.group-header .btn-set {
    color: var(--main-color);
    background-color: var(--text-color);
    outline: none;
    margin-top: 20px;
}

.group-header .btn-add {
    color: var(--text-color);
    background-color: var(--main-color);
    border: none;
    outline: none;
    margin-top: 20px;
}

.group-header .btn-add:hover {
    width: 150px;
}

.group-header .btn-set:hover {
    width: 150px;
}

.group-header img {
    width: 70px;
    height: 70px;
    border-radius: 50%;
}


table {
    padding-top: 40px;
    border-collapse: collapse;
    width: 100%;
}

tr {
    border-bottom: var(--href-bg-color) solid 1px;
}

table, th {
    /*border: 1px solid #007eff;*/
}

td {
    padding: 3px 10px;
    text-align: center;
    min-height: 30px;
    /*background-color: #f9fbfd;*/
    /*border-bottom: 1px solid #007eff;*/
}
tr:nth-child(odd) { background-color: #f9fbfd; }


td img {
    width: 30px;
    padding: 3px;
    border: var(--href-bg-color) solid 1px;
    border-radius: 20px;
}

th {
    text-transform: uppercase;
    padding: 2px 10px;
    /*border: 1px solid #007eff;*/
}

.li-sidebar:hover {
    background-color: var(--href-bg-color);
    border-radius: 8px;
}

.li-sidebar a:hover {
    color: var(--main-color);

}

.li-sidebar img {
    width: 30px;
    height: 30px;
    margin-right: 2%;
    border: var(--href-bg-color) solid 1px;
    border-radius: 50%;

    vertical-align: middle;
}

.li-sidebar a {
    text-decoration: none;
    vertical-align: middle;
    display: block;
    color: var(--main-text-color);
}
/* ... */

